--- a/Udacity/Course 6 - Neural Networks/Unit 5 - Deep Learning with PyTorch/notebooks/Part 3 - Training Neural Networks (Exercises).ipynb
+++ b/Udacity/Course 6 - Neural Networks/Unit 5 - Deep Learning with PyTorch/notebooks/Part 3 - Training Neural Networks (Exercises).ipynb
@@ -62,7 +62,10 @@
    "source": [
     "## Losses in PyTorch\n",
     "\n",
-    "Let's start by seeing how we calculate the loss with PyTorch. Through the `nn` module, PyTorch provides losses such as the cross-entropy loss (`nn.CrossEntropyLoss`). You'll usually see the loss assigned to `criterion`. As noted in the last part, with a classification problem such as MNIST, we're using the softmax function to predict class probabilities. With a softmax output, you want to use cross-entropy as the loss. To actually calculate the loss, you first define the criterion then pass in the output of your network and the correct labels.\n",
+    "Let's start by seeing how we calculate the loss with PyTorch. Through the `nn` module, PyTorch provides losses such as the cross-entropy loss (`nn.CrossEntropyLoss`). (HW: This is what we'll typically use in classification problems). You'll usually see the loss assigned to `criterion`. (HW: so if we want to use cross-entropy we say criterion=nn.crossEntropyLoss and then create that class)\n",
+    "\n",
+    "\n",
+    "As noted in the last part, with a classification problem such as MNIST, we're using the softmax function to predict class probabilities. With a softmax output, you want to use cross-entropy as the loss. To actually calculate the loss, you first define the criterion then pass in the output of your network and the correct labels.\n",
     "\n",
     "Something really important to note here. Looking at [the documentation for `nn.CrossEntropyLoss`](https://pytorch.org/docs/stable/nn.html#torch.nn.CrossEntropyLoss),\n",
     "\n",
@@ -70,12 +73,14 @@
     ">\n",
     "> The input is expected to contain scores for each class.\n",
     "\n",
-    "This means we need to pass in the raw output of our network into the loss, not the output of the softmax function. This raw output is usually called the *logits* or *scores*. We use the logits because softmax gives you probabilities which will often be very close to zero or one but floating-point numbers can't accurately represent values near zero or one ([read more here](https://docs.python.org/3/tutorial/floatingpoint.html)). It's usually best to avoid doing calculations with probabilities, typically we use log-probabilities."
+    "This means we need to pass in the raw output of our network into the loss, not the output of the softmax function. This raw output is usually called the *logits* or *scores*. We use the logits because softmax gives you probabilities which will often be very close to zero or one but floating-point numbers can't accurately represent values near zero or one ([read more here](https://docs.python.org/3/tutorial/floatingpoint.html)). It's usually best to avoid doing calculations with probabilities, typically we use log-probabilities.\n",
+    "\n",
+    "HW: so, the activation function gives us the probabilities. We don't want to use that in backpropagation but rather the 'logits' or 'scores'. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,9 +124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is the shape of the logits: torch.Size([64, 10])\n",
+      "tensor(2.3157, grad_fn=<NllLossBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "# Build a feed-forward network\n",
     "model = nn.Sequential(nn.Linear(784, 128),\n",
@@ -143,7 +157,11 @@
     "\n",
     "# Forward pass, get our logits\n",
     "logits = model(images)\n",
+    "# print(f'this is the output from nn.Sequential: {logits}')\n",
+    "print(f'this is the shape of the logits: {logits.shape}')\n",
+    "\n",
     "# Calculate the loss with the logits and the labels\n",
+    "# is this using MSE??\n",
     "loss = criterion(logits, labels)\n",
     "\n",
     "print(loss)"
@@ -160,15 +178,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.3315, grad_fn=<NllLossBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Build a feed-forward network\n",
-    "model = \n",
+    "model = nn.Sequential(nn.Linear(784, 128),\n",
+    "                      nn.ReLU(),\n",
+    "                      nn.Linear(128, 64),\n",
+    "                      nn.ReLU(),\n",
+    "                      nn.Linear(64, 10),\n",
+    "                      nn.LogSoftmax(dim=1))\n",
     "\n",
     "# TODO: Define the loss\n",
-    "criterion = \n",
+    "criterion = nn.NLLLoss()\n",
     "\n",
     "### Run this to check your work\n",
     "# Get our data\n",
@@ -505,7 +536,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pytorch_env",
    "language": "python",
    "name": "python3"
   },
@@ -519,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
