--- a/Udacity/Course 6 - Neural Networks/Unit 5 - Deep Learning with PyTorch/notebooks/Part 3 - Training Neural Networks (Exercises).ipynb
+++ b/Udacity/Course 6 - Neural Networks/Unit 5 - Deep Learning with PyTorch/notebooks/Part 3 - Training Neural Networks (Exercises).ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
      "output_type": "stream",
      "text": [
       "this is the shape of the logits: torch.Size([64, 10])\n",
-      "tensor(2.3157, grad_fn=<NllLossBackward0>)\n"
+      "tensor(2.3107, grad_fn=<NllLossBackward0>)\n"
      ]
     }
    ],
@@ -178,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(2.3315, grad_fn=<NllLossBackward0>)\n"
+      "tensor(2.3235, grad_fn=<NllLossBackward0>)\n"
      ]
     }
    ],
@@ -224,6 +224,10 @@
    "source": [
     "## Autograd\n",
     "\n",
+    "\n",
+    "HW: remember, gradient is sigmoid prime f'(h)\n",
+    "then you multiply by the error term and LR\n",
+    "\n",
     "Now that we know how to calculate a loss, how do we use it to perform backpropagation? Torch provides a module, `autograd`, for automatically calculating the gradients of tensors. We can use it to calculate the gradients of all our parameters with respect to the loss. Autograd works by keeping track of operations performed on tensors, then going backwards through those operations, calculating gradients along the way. To make sure PyTorch keeps track of operations on a tensor and calculates the gradients, you need to set `requires_grad = True` on a tensor. You can do this at creation with the `requires_grad` keyword, or at any time with `x.requires_grad_(True)`.\n",
     "\n",
     "You can turn off gradients for a block of code with the `torch.no_grad()` content:\n",
@@ -242,9 +246,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.5952,  0.8031],\n",
+      "        [ 0.8410,  0.5206]], requires_grad=True)\n"
+     ]
+    }
+   ],
    "source": [
     "x = torch.randn(2,2, requires_grad=True)\n",
     "print(x)"
@@ -252,9 +265,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.3543, 0.6449],\n",
+      "        [0.7074, 0.2710]], grad_fn=<PowBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "y = x**2\n",
     "print(y)"
@@ -269,9 +291,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<PowBackward0 object at 0x0000017CBDE53BE0>\n"
+     ]
+    }
+   ],
    "source": [
     "## grad_fn shows the function that generated this variable\n",
     "print(y.grad_fn)"
@@ -286,9 +316,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.4944, grad_fn=<MeanBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "z = y.mean()\n",
     "print(z)"
@@ -298,14 +336,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can check the gradients for `x` and `y` but they are empty currently."
+    "You can check the gradients for `x` and `y` but they are empty currently.\n",
+    "\n",
+    "HW: this is because we haven't done a backward pass."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "print(x.grad)"
    ]
@@ -323,9 +371,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.2976,  0.4015],\n",
+      "        [ 0.4205,  0.2603]])\n",
+      "tensor([[-0.2976,  0.4015],\n",
+      "        [ 0.4205,  0.2603]], grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "z.backward()\n",
     "print(x.grad)\n",
@@ -350,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,9 +432,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before backward pass: \n",
+      " None\n",
+      "After backward pass: \n",
+      " tensor([[-0.0015, -0.0015, -0.0015,  ..., -0.0015, -0.0015, -0.0015],\n",
+      "        [-0.0037, -0.0037, -0.0037,  ..., -0.0037, -0.0037, -0.0037],\n",
+      "        [ 0.0009,  0.0009,  0.0009,  ...,  0.0009,  0.0009,  0.0009],\n",
+      "        ...,\n",
+      "        [-0.0004, -0.0004, -0.0004,  ..., -0.0004, -0.0004, -0.0004],\n",
+      "        [ 0.0024,  0.0024,  0.0024,  ...,  0.0024,  0.0024,  0.0024],\n",
+      "        [ 0.0005,  0.0005,  0.0005,  ...,  0.0005,  0.0005,  0.0005]])\n"
+     ]
+    }
+   ],
    "source": [
     "print('Before backward pass: \\n', model[0].weight.grad)\n",
     "\n",
@@ -395,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,9 +497,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial weights -  Parameter containing:\n",
+      "tensor([[-0.0338, -0.0266, -0.0133,  ..., -0.0148,  0.0021,  0.0124],\n",
+      "        [-0.0037,  0.0029, -0.0321,  ..., -0.0014,  0.0044, -0.0300],\n",
+      "        [-0.0275, -0.0066, -0.0124,  ..., -0.0228,  0.0168,  0.0063],\n",
+      "        ...,\n",
+      "        [ 0.0125,  0.0007, -0.0131,  ...,  0.0235, -0.0185,  0.0009],\n",
+      "        [ 0.0256, -0.0218, -0.0002,  ...,  0.0264,  0.0248, -0.0271],\n",
+      "        [ 0.0213, -0.0096, -0.0051,  ..., -0.0265,  0.0217, -0.0136]],\n",
+      "       requires_grad=True)\n",
+      "Gradient - tensor([[ 0.0033,  0.0033,  0.0033,  ...,  0.0033,  0.0033,  0.0033],\n",
+      "        [ 0.0006,  0.0006,  0.0006,  ...,  0.0006,  0.0006,  0.0006],\n",
+      "        [-0.0019, -0.0019, -0.0019,  ..., -0.0019, -0.0019, -0.0019],\n",
+      "        ...,\n",
+      "        [ 0.0002,  0.0002,  0.0002,  ...,  0.0002,  0.0002,  0.0002],\n",
+      "        [ 0.0010,  0.0010,  0.0010,  ...,  0.0010,  0.0010,  0.0010],\n",
+      "        [ 0.0005,  0.0005,  0.0005,  ...,  0.0005,  0.0005,  0.0005]])\n"
+     ]
+    }
+   ],
    "source": [
     "print('Initial weights - ', model[0].weight)\n",
     "\n",
@@ -443,9 +542,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated weights -  Parameter containing:\n",
+      "tensor([[-0.0339, -0.0267, -0.0133,  ..., -0.0148,  0.0021,  0.0123],\n",
+      "        [-0.0037,  0.0029, -0.0321,  ..., -0.0014,  0.0044, -0.0300],\n",
+      "        [-0.0275, -0.0066, -0.0123,  ..., -0.0228,  0.0168,  0.0063],\n",
+      "        ...,\n",
+      "        [ 0.0125,  0.0007, -0.0131,  ...,  0.0235, -0.0185,  0.0009],\n",
+      "        [ 0.0256, -0.0218, -0.0002,  ...,  0.0264,  0.0247, -0.0271],\n",
+      "        [ 0.0213, -0.0096, -0.0051,  ..., -0.0266,  0.0217, -0.0136]],\n",
+      "       requires_grad=True)\n"
+     ]
+    }
+   ],
    "source": [
     "# Take an update step and view the new weights\n",
     "optimizer.step()\n",
@@ -467,7 +582,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training loss: 1.9704400900838726\n",
+      "Training loss: 0.8839126420872552\n",
+      "Training loss: 0.5312216020723396\n",
+      "Training loss: 0.43250903733440044\n",
+      "Training loss: 0.3870049325038375\n"
+     ]
+    }
+   ],
    "source": [
     "## Your solution here\n",
     "\n",
@@ -478,6 +605,9 @@
     "                      nn.Linear(64, 10),\n",
     "                      nn.LogSoftmax(dim=1))\n",
     "\n",
+    "dataiter = iter(trainloader)\n",
+    "images, labels = next(dataiter)\n",
+    "\n",
     "criterion = nn.NLLLoss()\n",
     "optimizer = optim.SGD(model.parameters(), lr=0.003)\n",
     "\n",
@@ -485,13 +615,19 @@
     "for e in range(epochs):\n",
     "    running_loss = 0\n",
     "    for images, labels in trainloader:\n",
+    "        \n",
     "        # Flatten MNIST images into a 784 long vector\n",
     "        images = images.view(images.shape[0], -1)\n",
     "    \n",
     "        # TODO: Training pass\n",
-    "        \n",
-    "        loss = \n",
-    "        \n",
+    "        # Forward pass, calc loss, then backward pass, then update weights (optimizer step)\n",
+    "        # First, clear the gradients, do this because gradients are accumulated\n",
+    "        optimizer.zero_grad()\n",
+    "        output = model(images)\n",
+    "        loss = criterion(output, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
     "        running_loss += loss.item()\n",
     "    else:\n",
     "        print(f\"Training loss: {running_loss/len(trainloader)}\")"
